<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Insomniac</string>
    <string name="action_settings">Settings</string>
    <string name="text_load_account">Load Account</string>
    <string name="text_new_account">New Account</string>
    <string name="title_activity_new_account">NewAccountActivity</string>
    <string name="text_enter_name">Enter your name</string>
    <string name="text_create_account">Create Account</string>
    <string name="text_select_class">Select a Class</string>
    <string name="text_warrior">Warrior</string>
    <string name="text_hunter">Hunter</string>
    <string name="text_wizard">Wizard</string>
    <string name="text_enter_pin">Enter a PIN</string>
    <string name="text_pin">PIN</string>
    <string name="title_activity_load_account">LoadAccountActivity</string>
    <string name="text_delete">Delete</string>
    <string name="text_sign_in">Sign In</string>
    <string name="title_activity_town">TownActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_go_inn">Go to the inn</string>
    <string name="text_go_shop">Go to the shop</string>
    <string name="text_go_blacksmith">Go to the blacksmith</string>
    <string name="text_open_inventory">Open inventory</string>
    <string name="text_what_do">What would you like to do?</string>
    <string name="text_select_account">Please select an account</string>
    <string name="text_invalid_pin">Invalid PIN number</string>
    <string name="title_activity_inn">InnActivity</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="title_activity_blacksmith">BlacksmithActivity</string>
    <string name="title_activity_show_inventory">ShowInventory</string>
    <string name="text_go_wild">Travel to the wilderness</string>
    <string name="title_activity_wilderness">WildernessActivity</string>
    <string name="text_save_failed">Save failed</string>
    <string name="text_game_saved">Game saved</string>
    <string name="title_activity_transition">TransitionActivity</string>
    <string name="text_back_to_town">Back to town</string>
    <string name="text_equip_item">Equip item</string>
    <string name="text_no_items">You have no items</string>
    <string name="text_inventory">Inventory</string>
    <string name="text_equipped">Equipped</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_unequip_item">Unequip Item</string>
    <string name="text_total_statistics">Applied Statistics</string>
    <string name="text_stats">Health Points:\nAction Points:\nPhysical Damage:\nMagic Damage:\nPhysical Defence:\nMagic Defence:\nSpeed\nCritical:</string>
    <string name="text_cannot_equip_item">You cannot equip this item</string>
    <string name="text_unable_sign_in">Unable to sign in</string>
    <string name="text_no_saves">No saved accounts</string>
    <string name="text_pin_length">Enter a four digit PIN number</string>
    <string name="text_no_item_selected">No item selected</string>
    <string name="text_welcome_blacksmith">Welcome to my armory! What can I help you with?</string>
    <string name="text_trade_items">Trade items</string>
    <string name="text_upgrade_equipment">Upgrade equipment</string>
    <string name="text_imbue_equipment">Imbue equipment</string>
    <string name="title_activity_trade_items">TradeItemsActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="text_buy">Buy item</string>
    <string name="text_sell">Sell item</string>
    <string name="text_cannot_afford">You cannot afford this item</string>
    <string name="text_no_space">Not enough space in your inventory</string>
    <string name="text_reassure_sell">Are you sure you want to sell this item?</string>
    <string name="text_reassure_buy">Are you sure you want to buy this item?</string>
    <string name="text_ok">Ok</string>
    <string name="text_cancel">Cancel</string>

</resources>