<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="game.activities.NewAccountActivity"
    tools:ignore="MergeRootFrame" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/menubackground" />

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/new_account_title"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical" >

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_enter_name"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_text_account_name"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUUVWXYZ"
            android:hint="@string/text_enter_name"
            android:maxLength="20"
            android:textColor="#ffffff" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_enter_pin"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_text_pin"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:hint="@string/text_pin"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textColor="#ffffff" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
		<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_select_class"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_warrior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/text_warrior"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_hunter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_hunter"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_wizard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_wizard"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RadioGroup>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/double_lined"
            android:text="@string/text_create_account" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/new_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="70sp" />

</RelativeLayout>