<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="game.activities.LoadAccountActivity"
    tools:ignore="MergeRootFrame">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/menubackground" />

    <TextView
        android:id="@+id/load_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="70sp" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@id/load_account_title"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:id="@+id/save_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/text_load_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scroll_view"
        android:layout_below="@id/scroll_view"
        android:layout_marginTop="20dp"
        android:text="@string/text_enter_pin"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_load_pin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:maxLength="4"
        android:layout_below="@id/text_load_pin"
        android:layout_alignLeft="@id/text_load_pin"
        android:hint="@string/text_pin"
        android:text="0000"
        android:textColor="#ffffff"
        android:inputType="numberPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_load_pin"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/double_lined"
            android:text="@string/text_delete" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/double_lined"
            android:text="@string/text_sign_in" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>


</RelativeLayout>