<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contain_item_display"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context="game.activities.ShowInventory"
    tools:ignore="MergeRootFrame">

    <RelativeLayout
        android:id="@+id/relative_top"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <TextView
                android:id="@+id/pic_head"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:clickable="true"
                android:onClick="onEquipSelected"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_margin="5dp"
                android:background="@drawable/single_lined_black" />

            <TextView
                android:id="@+id/pic_chest"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:clickable="true"
                android:onClick="onEquipSelected"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_margin="5dp"
                android:background="@drawable/single_lined_black" />

            <TextView
                android:id="@+id/pic_legs"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:clickable="true"
                android:onClick="onEquipSelected"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_margin="5dp"
                android:background="@drawable/single_lined_black" />
        </LinearLayout>

        <TextView
            android:id="@+id/pic_wpn1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:background="@drawable/single_lined_black"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/linearLayout"
            android:clickable="true"
            android:onClick="onEquipSelected"
            android:gravity="center"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/pic_wpn2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:background="@drawable/single_lined_black"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/linearLayout"
            android:layout_below="@+id/pic_wpn1"
            android:clickable="true"
            android:onClick="onEquipSelected"
            android:gravity="center"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="#FFFFFF"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/pic_wpn1"
            android:textSize="20sp"
            android:text="@string/text_total_statistics"
            android:layout_below="@+id/pic_wpn1" />

        <TextView
            android:id="@+id/item_stats_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/pic_wpn1"
            android:text="@string/text_stats"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/item_title" />

        <TextView
            android:id="@+id/item_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/item_stats_name"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/item_title" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_alignTop="@id/center_marker"
        android:background="@drawable/single_lined_black"
        android:layout_weight="1"
        android:orientation="vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_item_pic"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_item_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:text="No item selected" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_stat_names"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/textView_item_stats"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff" />


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_unequip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_unequip_item"
            android:enabled="false"
            android:onClick="unequipSelected"
            android:textColor="#ffffff" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>